RESOLVED FIXED20439
Assertion in HashTraits for CallIdentifier loading a heavy profile
https://bugs.webkit.org/show_bug.cgi?id=20439
Summary Assertion in HashTraits for CallIdentifier loading a heavy profile
Timothy Hatcher
Reported 2008-08-18 17:49:16 PDT
THere is an assert that fires because emptyValue and deletedValue for CallIdentifier are equal.
Attachments
Proposed patch (2.20 KB, patch)
2008-08-18 17:51 PDT, Timothy Hatcher
mitz: review+
Timothy Hatcher
Comment 1 2008-08-18 17:51:49 PDT
Created attachment 22868 [details] Proposed patch
mitz
Comment 2 2008-08-18 17:53:33 PDT
Comment on attachment 22868 [details] Proposed patch r=me
Timothy Hatcher
Comment 3 2008-08-19 10:01:41 PDT
Landed in r35836.
Note You need to log in before you can comment on or make changes to this bug.