        Fix an assertion when generating a heavy profile because the         empty value and deleted value of CallIdentifier where equal.

https://bugs.webkit.org/show_bug.cgi?id=20439

        Reviewed by Dan Bernstein.

        * profiler/CallIdentifier.h: Make the emptyValue for CallIdentifier
        use empty strings for URL and function name.

Canonical link: https://commits.webkit.org/28242@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35836 268f45cc-cd09-0410-ab3c-d52691b4dbfc